scenarios/glue_privesc/terraform/vpc.tf
resource "aws_vpc_endpoint" "s3" {
  vpc_id            = aws_vpc.cg-vpc.id
  service_name      = "com.amazonaws.us-east-1.s3"
  vpc_endpoint_type = "Gateway"
  route_table_ids   = [aws_route_table.cg-public-subnet-route-table.id]
}

resource "aws_vpc_endpoint" "glue" {
  vpc_id            = aws_vpc.cg-vpc.id
  service_name      = "com.amazonaws.us-east-1.glue"
  vpc_endpoint_type = "Gateway"
  route_table_ids   = [aws_route_table.cg-public-subnet-route-table.id]
}


resource "aws_vpc" "cg-vpc" {
  cidr_block           = "10.10.0.0/16"
  enable_dns_hostnames = true
  tags = {
    Name     = "CloudGoat ${var.cgid} VPC"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
}

#Internet Gateway
resource "aws_internet_gateway" "cg-internet-gateway" {
  vpc_id = aws_vpc.cg-vpc.id
  tags = {
    Name     = "CloudGoat ${var.cgid} Internet Gateway"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
}


#Public Subnets
resource "aws_subnet" "cg-public-subnet-1" {
  availability_zone = "${var.region}a"
  cidr_block        = "10.10.10.0/24"
  vpc_id            = aws_vpc.cg-vpc.id
  tags = {
    Name     = "CloudGoat ${var.cgid} Public Subnet #1"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
}
resource "aws_subnet" "cg-public-subnet-2" {
  availability_zone = "${var.region}b"
  cidr_block        = "10.10.20.0/24"
  vpc_id            = aws_vpc.cg-vpc.id
  tags = {
    Name     = "CloudGoat ${var.cgid} Public Subnet #2"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
}

#Public Subnet Routing Table
resource "aws_route_table" "cg-public-subnet-route-table" {
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.cg-internet-gateway.id
  }
  vpc_id = aws_vpc.cg-vpc.id
  tags = {
    Name     = "CloudGoat ${var.cgid} Route Table for Public Subnet"
    Stack    = "${var.stack-name}"
    Scenario = "${var.scenario-name}"
  }
}
#Public Subnets Routing Associations
resource "aws_route_table_association" "cg-public-subnet-1-route-association" {
  subnet_id      = aws_subnet.cg-public-subnet-1.id
  route_table_id = aws_route_table.cg-public-subnet-route-table.id
}
resource "aws_route_table_association" "cg-public-subnet-2-route-association" {
  subnet_id      = aws_subnet.cg-public-subnet-2.id
  route_table_id = aws_route_table.cg-public-subnet-route-table.id
}
